5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1834_2604.log
== SUBMITION (2019-07-01 23:35:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(

for i in range(shape(pagamento)[0]):
	print(max(pagamento[i,:]))
-- EXECUTION TIME:
0.711093
-- ERROR:
  File "/home/codebench/codes/1834/2604/main.py", line 6
    for i in range(shape(pagamento)[0]):
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:36:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array("Matriz: ")

for i in range(shape(pagamento)[0]):
	print(max(pagamento[i,:]))
-- EXECUTION TIME:
1.16654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 6, in <module>
    for i in range(shape(pagamento)[0]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:36:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(input("Matriz: "))

for i in range(shape(pagamento)[0]):
	print(max(pagamento[i,:]))
-- EXECUTION TIME:
0.915495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 6, in <module>
    for i in range(shape(pagamento)[0]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:36:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(input("Matriz: "))

for i in range(shape(pagamento)[0]):
	print(max(pagamento[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:37:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(input("Matriz: "))

for i in range(shape(pagamento)[1]):
	print(max(pagamento[i,:]))
-- EXECUTION TIME:
1.02986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 6, in <module>
    for i in range(shape(pagamento)[1]):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:37:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(input("Matriz: "))

for i in range(shape(pagamento)[1]):
	print(max(pagamento[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:52:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("Matriz: ")))

for i in range(shape(pagamento)[0]):
	print(max(pagamento[i,:]))
-- EXECUTION TIME:
1.00297
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
